fixed layout issue on sliders when using too small picture

--- a/style.sass
+++ b/style.sass
@@ -803,6 +803,17 @@ img
         color: $color-text-grey
         width: 100%
 
+.slick-slider
+    .slick-track,
+    .slick-list
+        display: flex
+
+.slick-initialized
+    .slick-slide
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+
 ///////////////////////////////////////////////////////////////////////////////
 // SIDEBAR                                                                   //
 ///////////////////////////////////////////////////////////////////////////////
